[package]
name = "rlang"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
description = "R as a fusevm frontend: a lexer, parser, and compiler to fusevm bytecode on an RHost vector heap, with no bespoke VM or JIT"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/rlang"
homepage = "https://menketechnologies.github.io/rlang/"
documentation = "https://docs.rs/rlang"
readme = "README.md"
keywords = ["r", "statistics", "interpreter", "jit", "fusevm"]
categories = ["command-line-utilities", "compilers"]
publish = true
# Dev-only artifacts kept out of the published crate. Consumers get src, the
# `Rscript` binary, the man page and completions — not the HUD site, CI config,
# integration corpus, or the bug tracker. None are referenced at compile time.
exclude = [
    "/docs/",
    "/.github/",
    "/tests/",
    "/examples/",
    "/BUGS.md",
]

# rlang is a standalone crate, not a workspace member. An explicit empty
# `[workspace]` stops cargo walking up to the MenkeTechnologiesMeta parent.
[workspace]

[lib]
name = "rlang"
path = "src/lib.rs"
# staticlib so an AOT object can be linked against the rlang runtime (the
# extension-op dispatch + the fusevm AOT runtime) into a standalone native
# executable via `Rscript --aot`. The wasm build is emitted as a `cdylib` on
# demand with `cargo rustc --lib --crate-type cdylib --target
# wasm32-unknown-unknown` (see src/wasm.rs) — cdylib is not a default crate-type
# here because a *native* cdylib fails to link (fusevm's AOT runtime references
# object-only symbols that exist only in an emitted `.fvm` object).
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "Rscript"
path = "src/main.rs"

# Offline generator for docs/reference.html — renders the primitive library
# (the src/lsp.rs corpus) as a static page. Run before pushing Pages.
[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

# Differential parity harness: runs the corpus through rlang and the reference
# `Rscript`, diffing stdout. Development tool — it needs R on PATH, so CI never
# runs it; its frozen outputs live in tests/data/parity_expected.txt, which
# tests/parity.rs replays with no R installed.
[[bin]]
name = "parity"
path = "src/bin/parity.rs"

# R executes on fusevm. rlang is a pure frontend: it lowers R to fusevm bytecode
# (src/compiler.rs) and hosts the R vector heap (src/host.rs, reached from
# fusevm's builtin dispatch). Every R value rides through the VM as a
# `Value::Obj(u32)` handle into that heap, because in R even a scalar is a
# length-1 vector with attributes.
#
# These deps build on *every* target, including `wasm32-unknown-unknown`. The
# base `fusevm` here is the bare interpreter (no Cranelift/libc) so the wasm
# build compiles; the native target below layers `jit`/`aot`/`ffi` on top of the
# same dependency (cargo unions the feature sets per target).
[dependencies]
fusevm = { version = "0.14.10" }

# R vectors and lists carry ordered `names`; attribute maps are insertion-ordered
# and observable (`attributes(x)`), so IndexMap is the right container.
indexmap = "2"

# Regular expressions for `grepl`/`sub`/`gsub`, which R programs lean on
# constantly; R's default patterns are POSIX ERE, close enough to the regex
# crate's syntax for the common cases.
regex = "1"

# Glob matcher for the AOP call-intercept registry (src/intercepts.rs).
glob = "0.3"

# Native-only stack. Cranelift (`jit`/`aot`), `dlopen`+`rustc` FFI (`ffi`), the
# on-disk rkyv cache, the LSP/REPL frontends, and libc all require a real OS, so
# they are excluded from the wasm build. On wasm the same crate runs R on the
# fusevm interpreter and exports `rlang_eval` (src/wasm.rs).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# `jit-disk-cache` turns on fusevm's three-tier Cranelift JIT *and* its
# persistent on-disk cache of native code; `aot` enables the ahead-of-time
# emitter behind `Rscript --aot`; `ffi` enables the inline-Rust `rust {}` bridge
# reached from R via `.rust()` / `.Call()`.
fusevm = { version = "0.14.10", features = ["jit", "jit-disk-cache", "aot", "ffi"] }

clap = { version = "4.5", features = ["derive", "cargo"] }

# rkyv-backed bytecode cache at ~/.rlang/scripts.rkyv (mirrors zshrs/rubylang):
# the outer shard is a zero-copy rkyv archive; the inner per-script fusevm::Chunk
# is bincode (fusevm::Chunk is serde-owned, not rkyv::Archive).
rkyv = { version = "0.7", features = ["validation", "archive_le", "size_32"] }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Base64 marshals the `.rust {}` block body into fusevm's FFI compiler, and the
# embedded closure image into an AOT object.
base64 = "0.22"

# LSP (`Rscript --lsp`) over stdio.
lsp-server = "0.7.9"
lsp-types = "0.97.0"
libc = "0.2"

# Interactive REPL (`Rscript --repl` / TTY fallthrough).
reedline = "0.47.0"
nu-ansi-term = "0.50"

[dev-dependencies]
tempfile = "3"
